# market-maker-bot

./: .gitignore  CMakeLists.txt  README.md
analysis/: plot_results.py
data/: historical_ticks.csv
include/: backtest_engine.hpp  fair_value_estimator.hpp  market_maker.hpp  noise_trader.hpp  pnl_tracker.hpp  risk_manager.hpp  static_spread_strategy.hpp
src/: backtest_engine.cpp  fair_value_estimator.cpp  main.cpp  market_maker.cpp  noise_trader.cpp  pnl_tracker.cpp  risk_manager.cpp  static_spread_strategy.cpp
tests/: test_fair_value.cpp  test_pnl_tracker.cpp  test_quoting.cpp  test_risk_limits.cpp
